# tofUI

./: .env.template  .gitignore  ARCHITECTURE.md  DASHBOARD.md  LICENSE  README.md  branch-test.html  example_output.html  example_plan.html  example_plan.json  examples.md  github-pages-test.html  has-changes-example.html  has-errors-example.html  large-plan-example.html  large-plan-example.json  no-changes-example.html  pyproject.toml  sample-plan.json  setup.py  test-installation.html  test-optional-folder.html  test-report-2024.html  test-sample.html  test-simplified-structure.html  test-updated.html  test_apply_report.html  test_output.html  test_tofui.py  tofui_config.json  verify-dashboard-setup.sh
.github/workflows/: release.yml
static-dashboard/: .jekyll-metadata  README.md  _config.yml  config.json  index.html
static-dashboard/reports/: IBM-Sports-application-production-build-456.json  IBM-Sports-infrastructure-aws_eu_west_1-deploy-003.json  IBM-Sports-infrastructure-aws_us_east_1-deploy-001.json  IBM-Sports-infrastructure-aws_us_west_2-deploy-002.json  IBM-Sports-networking-_root-network-update-20.json  ibm-sports-infrastructure-aws_us_east_2-deploy-123.json  ibm-sports-infrastructure-aws_us_east_2-deploy-124.json  ibm-sports-infrastructure-aws_us_west_2-deploy-45.json  ibm-sports-networking-_root-network-update-10.json  index.json
terraplan/: __init__.py  cli.py  parser.py
tofui/: __init__.py  __main__.py  analyzer.py  apply_parser.py  cli.py  generator.py  parser.py  publisher.py
tofui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
